Updated fieldset styling

--- a/css/settings.css
+++ b/css/settings.css
@@ -60,7 +60,8 @@
   align-content: space-between;
 }
 .settings form fieldset {
-  border: 1px solid white;
+  border-style: none;
+  background: rgba(255, 255, 255, 0.04);
   width: 200px;
 }
 .settings form label {
