--- a/css/settings.scss
+++ b/css/settings.scss
@@ -58,7 +58,8 @@
     justify-content: space-between;
     align-content: space-between;
     fieldset {
-      border: 1px solid white;
+      border-style: none;
+      background: rgba(255,255,255,0.04);
       width: 200px;
     }
     label {
